fixed background zooming issue on mobile

--- a/src/styles/DesignStyle.css
+++ b/src/styles/DesignStyle.css
@@ -4,7 +4,7 @@
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
-  min-height: 100vh;
+  min-height: 900px;
   display: flex;
   flex-direction: column;
   justify-content: center;
