--- a/src/styles/HomePageStyle.css
+++ b/src/styles/HomePageStyle.css
@@ -34,7 +34,31 @@
     gap: 5px;
 
 }
+.explore {
+    display: inline-block; 
+    background-color: #000000;
+    color: white; 
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1rem; 
+    cursor: pointer; 
+    text-align: center; 
+    margin: 2rem auto;
+}
 
+.explore a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.explore:hover {
+    background-color: #333333; 
+}
+
+.explore:active {
+    background-color: #555555; 
+}
 
 @media(max-width : 768px) {
     .quoteImg {
